# linkblocks

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Justfile  README.md  REUSE.toml  build.rs  clippy.toml  ties.cdx.json  zizmor.yml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
.sqlx/: query-0411f95092b864a7b9f321ab244b1a867d22ceb7f90035d8c6f7a1798914f88f.json  query-174936ee6131db6b3d8f45ffa3840cd1847a62dc26a6f2c2366adbd47efa9716.json  query-1b237bea469a8cc4ce753771aa7c250168b082a11aa86e23c667c55ed52feeb5.json  query-230ba3dfbe2f9d881b7f08eb3b643c33c18be3a4eaecc4de04c70f3ad4a6ca5c.json  query-3aa9b9b3e244f96e2c21127af0da9c7ce76a5a7959c134fcc21132917f68b183.json  query-3feacc3ffbf6b40745add40acb7eeeaea6d4f4f738d0f0792d0cf12da1f48f1c.json  query-4316fcc1eb524644a9f5cb60c8e5228cb2584433ab0e58c1764f44da6f600876.json  query-547a017380345f3db959eb7b19cf03e5a3bcb5c8b7892bd127e6887259a1148d.json  query-54cf47e00b6d33d6980398e8d6dfa0cc96b2df80780d962468317c2ffaf822e2.json  query-59d65d50c443e4507472f12b1b6373d99d5a97f251b72b68eeb47182234712d7.json  query-61595a6039a143c89b2271b89c48258248b64b16d5c9c9e60a451d22a8bd7606.json  query-643cfd5ef9eaa6923d1008c87f0ed34676248ef859f995ea405acb5b7838dca5.json  query-67c929f56f37161b983f22f002188cc4e775a303ba611254606b4debf378460e.json  query-778e3ae8efd005464d2c0dd0b0622c6daf151d3eae6a0db41a86a7d44b675b98.json  query-7e44d37bde3293fe796585accc317b96be6d8af4aba6d50ce209e7690526a294.json  query-7fcd0e4976f2b4a85284559bf2607926f4f9209cacc907c5705bf3511cc322a1.json  query-8d809638df21da87934b05e4eaab08e9fc745bdcf698b649ad4bc1e8a867dda5.json  query-8ea42a6c1bf0fc8e6f8f262f70994d52bdcced1bdd97168f82b90eb57712d8d6.json  query-90470f4aa48fe7ff00380d50abb011800bc84ff8db07e7566dce48440c29734f.json  query-9de76a4587b8966da313ca27f00d7b52ab9ee2957c992ac5b8be457acb0dd1d4.json  query-aa7069f4da1bc30cc759545f0bbc9b1f113eccfd4f31401c10644436110a1f67.json  query-af993a58cf4955c07163161f29fc6e8eb4d7c1e17cfc27f094b8df6560cca03f.json  query-c0773a0f111251cc143ea4ebcd6677dacca9d942ac75cf5fda3336bcdda37f91.json  query-c3cbf4ad5a333f7e2f7e1b5be1a83fd0e093fc81e0f79dcce726a17b0637bd43.json  query-d55e0047b612b86c1b70215b857bd40f235ef5f6b656541f3a2886da35807e78.json  query-de6831a566fa2931052c3ce30bdb4cfb7435aba02936b2474cb8c84bc0ea2684.json  query-e3e15d752a4ffc2aa1401304ad40bbe3b577440ab00474767acbe0dd0416a23b.json  query-f376a9a323fafe043a9e5d9204da9058bf54658d4fe6dda603566bc760feb4f4.json
doc/: .docker-compose.test.yml  development-setup.md  docker-compose.yml  federation-planning.md  federation-testing.md  index.md  publish-release.md  testing-sso.md  values-goals.md
migrations/: 20260313111046_add_bookmark_fts_index.sql  20260320155524_bookmark_fts_default.sql  20260320160032_add_missing_pending_archives.sql  20260320170000_add_archive_extracted_title.sql  20260605103623_add_indexes_bookmark_editing.sql
src/: archive.rs  authentication.rs  built_version.rs  cli.rs  date_time.rs  htmf_response.rs  insert_demo_data.rs  main.rs  oidc.rs  response_error.rs  server.rs  tracing_filter.rs  tracing_format.rs
src/archive/: fetch_url.rs  queue.rs  readability.rs  safe_ips.rs
src/db/: ap_users.rs  archives.rs  bookmarks.rs  follows.rs  items.rs  links.rs  lists.rs  mod.rs  search.rs  users.rs
src/db/migration_hooks/: generate_bookmark_ap_ids.rs  generate_missing_ap_users.rs  mod.rs
src/federation/: activity.rs  bookmark.rs  create_bookmark.rs  edit_bookmark.rs  mod.rs  signing.rs  undo_follow.rs
src/forms/: ap_users.rs  bookmarks.rs  validate_url.rs
src/routes/: assets.rs  bookmarks.rs  federation.rs  links.rs  lists.rs  search.rs  users.rs
src/tests/: archive.rs  bookmarks.rs  federation.rs  lists.rs  migrations.rs  mod.rs  response_error.rs  search.rs  users.rs
src/tests/snapshots/: ties__tests__bookmarks__get_unsorted_bookmarks.snap  ties__tests__lists__get_create_list.snap  ties__tests__users__can_login.snap
src/tests/util/: test_app.rs
src/views/: base_document.rs  content.rs  create_bookmark.rs  edit_bookmark.rs  index.rs  mod.rs  search_results.rs  show_bookmark.rs
