[package]
name = "ties"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false
rust-version = "1.88.0"

[dependencies]
itertools = "0.14.0"
anyhow = { version = "1.0.102" }
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["macros", "tracing"] }
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
clap = { version = "4.5.60", features = ["derive", "env", "cargo"] }
fake = { version = "4.4.0", default-features = false }
friendly-zoo = "1.1.0"
garde = { version = "0.22.1", default-features = false, features = [
    "derive",
    "url",
    "regex",
] }
include_dir = "0.7.4"
listenfd = "1.0.2"
mime_guess = "2.0.5"
rand = { version = "0.10.0" }
serde = "1.0.228"
serde-aux = { version = "4.7.0", default-features = false }
serde_json = "1.0.149"
serde_qs = { version = "1.0.0", features = ["axum"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "uuid",
    "time",
    "json",
], default-features = false }
thiserror = "2.0.18"
openidconnect = "4.0.1"
time = { version = "0.3.47", default-features = false, features = ["serde"] }
tokio = { version = "1.50.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["tracing", "trace"] }
tower-sessions = { version = "0.14" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
visdom = "1.0.4"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
htmf = { git = "https://github.com/raffomania/htmf", features = [
    "pretty-print",
] }
percent-encoding = "2.3.2"
activitypub_federation = { version = "0.6.5", default-features = false, features = [
    "axum",
] }
url = { version = "2.5.8", features = ["serde"] }
async-trait = "0.1.89"
chrono = "0.4.44"
redact = "0.1.11"
enum_delegate = "0.2.0"
tower-livereload = "0.10.3"
reqwest = "0.13.2"
ipnet = "2.12.0"
legible = "0.4.2"
ammonia = "4.1.2"
easy-cast = "0.5.4"
http-body-util = "0.1.3"
encoding_rs = "0.8.35"

[patch.crates-io]
activitypub_federation = { git = "https://github.com/raffomania/activitypub-federation-rust", branch = "update-axum" }

[build-dependencies]
railwind = "0.1.5"
walkdir = "2"
regex = "1.12.3"

[dev-dependencies]
http-body-util = "0.1.3"
serde_json = "1.0.149"
test-log = { version = "0.2.19", features = [
    "trace",
], default-features = false }
insta = "1.46.3"
pretty_assertions = "1.4.1"

[package.metadata.bin]
just = { version = "1.38.0", locked = true }
cargo-watch = { version = "8.5.3", locked = true }
systemfd = { version = "0.4.3", locked = true }
sqlx-cli = { version = "0.8.6", locked = true, bins = ["sqlx"] }
cargo-cyclonedx = { version = "0.5.7", locked = true }
zizmor = { version = "1.16.3", locked = true }

[profile.dev.package]
insta.opt-level = 3
