[package]
name = "ties"
version = "0.2.1"
edition = "2024"
license = "AGPL-3.0-or-later"
publish = false
rust-version = "1.88.0"

[profile.dev.package]
insta.opt-level = 3
argon2.opt-level = 2

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

restriction = { level = "warn", priority = -1 }

# Disable a bunch of restrictions that don't make sense for ties
missing_docs_in_private_items = { level = "allow" }
arbitrary_source_item_ordering = { level = "allow" }
question_mark_used = { level = "allow" }
implicit_return = { level = "allow" }
single_call_fn = { level = "allow" }
str_to_string = { level = "allow" }
blanket_clippy_restriction_lints = { level = "allow" }
shadow_reuse = { level = "allow" }
pattern_type_mismatch = { level = "allow" }
doc_paragraphs_missing_punctuation = { level = "allow" }
min_ident_chars = { level = "allow" }
mod_module_files = { level = "allow" }
self_named_module_files = { level = "allow" }
pub_use = { level = "allow" }
cfg_not_test = { level = "allow" }
partial_pub_fields = { level = "allow" }
error_impl_error = { level = "allow" }
unused_trait_names = { level = "allow" }
std_instead_of_core = { level = "allow" }
float_arithmetic = { level = "allow" }
# Used extensively in sqlx macros
as_conversions = { level = "allow" }
# These are tricky to use with conditional compilation
allow_attributes = { level = "allow" }
pub_with_shorthand = { level = "allow" }
missing_trait_methods = { level = "allow" }
default_numeric_fallback = { level = "allow" }
shadow_unrelated = { level = "allow" }
missing_inline_in_public_items = { level = "allow" }
needless_raw_strings = { level = "allow" }
panic_in_result_fn = { level = "allow" }
allow_attributes_without_reason = { level = "allow" }
single_char_lifetime_names = { level = "allow" }
non_ascii_literal = { level = "allow" }
iter_over_hash_type = { level = "allow" }

# TODO: go over each of these and decide which to deny.
# These are currently failing for our codebase but we chose to allow them
# so we can blanket-enable other restriction lints.
cognitive_complexity = { level = "allow" }
renamed_function_params = { level = "allow" }
redundant_closure_for_method_calls = { level = "allow" }
exhaustive_structs = { level = "allow" }
missing_errors_doc = { level = "allow" }
map_err_ignore = { level = "allow" }
print_stdout = { level = "allow" }
semicolon_outside_block = { level = "allow" }
integer_division_remainder_used = { level = "allow" }
infinite_loop = { level = "allow" }
impl_trait_in_params = { level = "allow" }
arithmetic_side_effects = { level = "allow" }
module_name_repetitions = { level = "allow" }
absolute_paths = { level = "allow" }
unreachable = { level = "allow" }

[dependencies]
itertools = "0.14.0"
anyhow = { version = "1.0.102" }
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["macros", "tracing"] }
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
clap = { version = "4.6.0", features = ["derive", "env", "cargo"] }
fake = { version = "5.1.0", default-features = false }
friendly-zoo = "1.1.0"
garde = { version = "0.22.1", default-features = false, features = [
    "derive",
    "url",
    "regex",
] }
include_dir = "0.7.4"
listenfd = "1.0.2"
mime_guess = "2.0.5"
rand = { version = "0.10.1" }
serde = "1.0.228"
serde-aux = { version = "4.7.0", default-features = false }
serde_json = "1.0.149"
serde_qs = { version = "1.1.0", features = ["axum"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "uuid",
    "time",
    "json",
], default-features = false }
thiserror = "2.0.18"
openidconnect = "4.0.1"
time = { version = "0.3.47", default-features = false, features = ["serde"] }
tokio = { version = "1.50.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["tracing", "trace"] }
tower-sessions = { version = "0.14" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
visdom = "1.0.4"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
htmf = { git = "https://github.com/raffomania/htmf", features = [
    "pretty-print",
] }
percent-encoding = "2.3.2"
activitypub_federation = { version = "0.6.5", default-features = false, features = [
    "axum",
] }
url = { version = "2.5.8", features = ["serde"] }
async-trait = "0.1.89"
chrono = "0.4.44"
redact = "0.1.11"
enum_delegate = "0.2.0"
tower-livereload = "0.10.3"
reqwest = { version = "0.13.2", features = [
    "brotli",
    "gzip",
    "zstd",
    "deflate",
] }
ipnet = "2.12.0"
legible = "0.4.2"
ammonia = "4.1.2"
easy-cast = "0.5.4"
http-body-util = "0.1.3"
encoding_rs = "0.8.35"

[patch.crates-io]
activitypub_federation = { git = "https://github.com/raffomania/activitypub-federation-rust", branch = "update-axum" }

[build-dependencies]
railwind = "0.1.5"
walkdir = "2"
regex = "1.12.3"

[dev-dependencies]
http-body-util = "0.1.3"
serde_json = "1.0.149"
test-log = { version = "0.2.19", features = [
    "trace",
], default-features = false }
insta = "1.46.3"
pretty_assertions = "1.4.1"

[package.metadata.bin]
just = { version = "1.49.0", locked = true }
cargo-watch = { version = "8.5.3", locked = true }
systemfd = { version = "0.4.6", locked = true }
sqlx-cli = { version = "0.8.6", locked = true, bins = ["sqlx"] }
cargo-cyclonedx = { version = "0.5.9", locked = true }
zizmor = { version = "1.24.1", locked = true }
cargo-msrv = { version = "0.19.3", locked = true }
cargo-nextest = { version = "0.9.133", locked = true }
